[package]
name = "nosql_rocksdb"
version = "0.0.1"
edition = "2021"
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
description = "The NoSQL DB API for ReocksDB"
readme = "../README.md"
homepage = "https://github.com/vincenzopalazzo/nosql-db"
repository = "https://github.com/vincenzopalazzo/nosql-db.git"

[dependencies]
rocksdb = { version = "0.19.0", features = ["lz4"] }
nosql_db = { path = "../nosql_db" }
